# halo2-playground

./: Cargo.toml
src/: README.md  lib.rs  main.rs  tests.rs  transcript_sponge.rs
