[package]
name = "halo2-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { tag = "v2023_04_20", git = "https://github.com/privacy-scaling-explorations/halo2.git", features = [ "dev-graph" ] }
halo2_gadgets = { tag = "v2023_04_20", git = "https://github.com/privacy-scaling-explorations/halo2.git", features = [ "dev-graph" ] }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
rand_core = { version = "0.6", default-features = false }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon" }
plotters = { version = "0.3.5" }
